# rknn-cpp-v8-v11-track

./: CMakeLists.txt  README.md  build-linux_RK3588.sh
bytetrack/include/: BYTETracker.h  dataType.h
bytetrack/src/: BYTETracker.cpp  STrack.cpp
include/: postprocess.h  preprocess.h  rkYolo.hpp
model/RK3588/: yolo11n.rknn
src/: main.cc  postprocess.cc  preprocess.cc  rkYolo.cc
